--- a/client/src/styles/BaseModal.css
+++ b/client/src/styles/BaseModal.css
@@ -1,9 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  right: auto;
-  bottom: auto;
   transform: translate(-50%, -50%);
   background: white;
   padding: 20px;
@@ -11,6 +11,7 @@
   width: 100%;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  font-family: 'Inter', sans-serif;
 }
 
 .overlay {
@@ -20,22 +21,4 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.75);
-}
-
-button {
-  margin-top: 10px;
-  margin-right: 10px;
-}
-
-/* src/App.css */
-.app {
-  text-align: center;
-  padding: 20px;
-}
-
-.open-modal-btn {
-  margin-top: 20px;
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
 }
