Доработка фильтров. Обновление стилей

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -44,20 +44,21 @@ body, html {
     cursor: pointer;
 }
 
-/* Стиль текстовых полей ввода */
 input[type="text"],
 input[type="number"],
-input[type="file"] {
+input[type="file"],
+input[type="date"] {
     display: block;
-    width: 100%;
-    margin-bottom: 15px;
-    margin-top: 15px;
+    width: calc(100% - 40px);
+    max-width: 500px;
+    margin: 15px auto;
     padding: 10px;
     background-color: #efe4e4;
     border: none;
     border-radius: 4px;
     font-size: 14px;
 }
+
 
 /* Общий стиль кнопок */
 button {
@@ -77,18 +78,43 @@ button:hover {
     background-color: #0056b3;
 }
 
+.icon-button {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon-button:hover {
+    background-color: #c4c4c4;
+}
+
+.icon-button img {
+    width: 24px; /* или другой размер, подходящий для ваших иконок */
+    height: 24px;
+}
+
 /* Фильтры */
 .filters {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
     margin-bottom: 20px;
     text-align: left;
 }
 
-.filters input {
-    margin-right: 10px;
+.filters input[type="text"],
+.filters button {
+    flex: 1 1 200px;
+    max-width: 300px;
 }
 
 .filters button {
-    padding: 10px;
+    flex: 0 0 auto;
+    padding: 10px 20px;
     background-color: #007bff;
     color: white;
     border: none;
